# zeperion

./: .gitignore  AGENT_GUIDE.md  CLAUDE.md  CONTRIBUTING.md  README.md  REFACTOR_SUMMARY.md  TESTING.md  THREAD_ID_GUIDE.md  pyproject.toml  requirement.txt
.ai_longrun_harness/: STATE_MANAGEMENT.md  USAGE.md  config.env.example  requirement_template.txt  reset_state.sh  run_multi_agent_loop.sh  run_pr_pipeline.sh  run_ralph_loop.sh  usage.txt
.ai_longrun_harness/prompts/: developer_prompt.txt  master_scheduler_prompt.txt  planner_prompt.txt  pr_fixer_prompt.txt  tester_prompt.txt
.ai_longrun_harness/state/: codex_comments.json  codex_comments.txt  current_plan.txt  lessons_learned.txt  pipeline_state.json  progress.json  task_result.txt  test_report.txt  workflow_state.json
.ai_longrun_harness/state/backups/20260512_141309/: progress.json  workflow_state.json
.ai_longrun_harness/state/backups/20260512_141426/: pr_body.md  pr_info.txt  progress.json  task_queue.txt
.ai_longrun_harness/template/: .settings.local.json  AGENTS.md  CLAUDE.md  PERMISSIONS.md  README.md  SETUP.md  pipeline_state.template.json  progress.template.json  settings.json  workflow_state.template.json  zeperion-flowchart.md  zeperion-init.sh  zeperion-pr.md  zeperion.md
.github/workflows/: ci.yml
.pi/: APPEND_SYSTEM.md
.pi/extensions/: zeperion-guard.ts
.pi/skills/zeperion-checkpoint/: SKILL.md
.pi/skills/zeperion-plan/: SKILL.md
.pi/skills/zeperion-review/: SKILL.md
.pi/skills/zeperion-ship/: SKILL.md
.pi/skills/zeperion-test/: SKILL.md
docs/: PR_PIPELINE.md  PR_PIPELINE_IMPLEMENTATION.md
examples/auth-system/: README.md  config.yaml  requirement.txt  run_demo.py
examples/auth-system/transcript/: lessons_learned.txt
examples/auth-system/transcript/runs/demo/: events.jsonl  round_001_developer.txt  round_001_developer_fix_1.txt  round_001_planner.txt  round_001_tester.txt  round_001_tester_fix_1.txt
examples/auth-system/transcript/threads/demo/: developer_output.txt  planner_output.txt  tester_output.txt
examples/live-version-2/: NOTES.txt  config.yaml  requirement.txt
examples/live-version-2/transcript/: lessons_learned.txt
examples/live-version-2/transcript/multi_agent/: developer_output.txt  pipeline_state.json  planner_output.txt  run.txt
examples/live-version-2/transcript/multi_agent/runs/: events.jsonl  round_001_tester.txt
examples/live-version-2/transcript/pr_pipeline/: run.txt
examples/live-version-feature/: NOTES.txt  config.yaml
examples/live-version-feature/transcript/: lessons_learned.txt
examples/live-version-feature/transcript/multi_agent/: run.txt  tester_output.txt
examples/live-version-feature/transcript/multi_agent/runs/: events.jsonl  round_001_developer.txt  round_001_developer_fix_1.txt  round_001_planner.txt  round_001_tester.txt
examples/live-version-feature/transcript/pr_pipeline/: run.txt
scripts/: install.sh  setup-target.sh
tests/: conftest.py  test_agents.py  test_changes.py  test_checkpoint_resume.py  test_checkpoint_serde.py  test_claude_heartbeat.py  test_cli_smoke.py  test_config.py  test_cost_tracking.py  test_e2e_smoke.py  test_examples_demo.py  test_fallback_agent.py  test_github_utils.py  test_gitignore.py  test_import_boundaries.py  test_integration.py  test_logging.py  test_models.py  test_multi_to_pr_handoff.py  test_parsers.py  test_pr_handoff.py  test_pr_pipeline_graph.py  test_prerun.py  test_probe.py  test_process_utils.py  test_prompts.py  test_resume_checkpoint.py  test_routes.py  test_ship_command.py  test_state_dir_guard.py  test_storage.py  test_tester_runs_code.py  test_threading_util.py  test_timeline.py  test_token_estimate.py  test_tracing.py  test_verify.py  test_web_app.py  test_workspace.py
zeperion/: __init__.py  __main__.py  cli.py  cli_ship.py  config.py
zeperion/agents/: __init__.py  anthropic.py  base.py  claude_code.py  factory.py  fallback.py  pi.py
zeperion/graphs/: __init__.py  control.py  multi_agent.py  nodes.py  pr_pipeline.py  routes.py
zeperion/graphs/pr_pipeline/: __init__.py  graph.py  handoff.py  nodes.py  routes.py
zeperion/models/: __init__.py  state.py
zeperion/parsers/: __init__.py  section_parser.py
zeperion/prompts/: __init__.py
zeperion/prompts/templates/: developer.txt  planner.txt  pr_fixer.txt  reviewer.txt  tester.txt
zeperion/storage/: __init__.py
zeperion/utils/: __init__.py  changes.py  checkpoint.py  checkpoint_resume.py  github.py  gitignore.py  logging.py  prerun.py  probe.py  process.py  threading.py  time.py  timeline.py  token_estimate.py  tracing.py  verify.py  workspace.py
zeperion/web/: __init__.py  app.py
