[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zeperion"
version = "0.1.0"
description = "Multi-agent development and PR delivery pipeline framework"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "ZEPERION Contributors"}
]
keywords = ["ai", "agents", "langgraph", "automation", "devops"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "langgraph>=0.2.0",
    "langgraph-checkpoint-sqlite>=1.0.0",
    "langchain>=0.3.0",
    "typer>=0.12.0",
    "pydantic>=2.0.0",
    "anthropic>=0.34.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]
github = [
    "PyGithub>=2.3.0",
]

[project.scripts]
zeperion = "zeperion.cli:app"

[project.urls]
Homepage = "https://github.com/yourusername/zeperion"
Repository = "https://github.com/yourusername/zeperion"
Issues = "https://github.com/yourusername/zeperion/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["zeperion*"]

[tool.setuptools.package-data]
zeperion = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
