[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zeperion"
version = "0.2.0"
description = "Multi-agent development and PR delivery pipeline framework"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "ZEPERION Contributors"}
]
keywords = ["ai", "agents", "langgraph", "automation", "devops"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "langgraph>=0.2.0",
    "langgraph-checkpoint-sqlite>=1.0.0",
    "aiosqlite>=0.19.0",
    "typer>=0.12.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "jinja2>=3.1.0",
    # OpenTelemetry API only — extremely small (no exporters, no SDK).
    # Without ``opentelemetry-sdk`` (see [project.optional-dependencies].tracing)
    # all spans collapse to no-ops, so this is pay-for-what-you-use.
    "opentelemetry-api>=1.25.0",
]

[project.optional-dependencies]
anthropic = [
    "anthropic>=0.34.0",
]
# Note: there is intentionally no ``claude-code`` extra. The
# ClaudeCodeAgent shells out to the user-installed ``claude`` binary;
# there is no Python-side dependency to declare. Install the CLI per
# https://docs.anthropic.com/claude/docs/claude-code instead.
github = [
    "PyGithub>=2.3.0",
]
# Observability is opt-in: install ``zeperion[tracing]`` to enable
# OpenTelemetry trace export, or just install the SDK separately. With
# only the API installed (default below) all instrumentation reduces to
# no-op spans, so the import is safe even without an OTEL collector.
tracing = [
    # NOTE: we depend on ``opentelemetry-api`` *unconditionally* below
    # so callers can import the API without installing the SDK.
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-exporter-otlp>=1.25.0",
]
# Browser UI: ``zeperion serve`` spins up a local FastAPI app with
# Server-Sent Events for live event streaming. Kept optional so the
# CLI install stays small for users who only want the terminal flow.
web = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
]
dev = [
    "anthropic>=0.34.0",
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "httpx>=0.27.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[project.scripts]
zeperion = "zeperion.cli:app"

[project.urls]
# TODO: replace with the canonical repo URL once the project has one.
# The previous value (``yourusername/zeperion``) leaked the cookiecutter
# placeholder into a published wheel.
Homepage = "https://github.com/zeperion/zeperion"
Repository = "https://github.com/zeperion/zeperion"
Issues = "https://github.com/zeperion/zeperion/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["zeperion*"]

[tool.setuptools.package-data]
zeperion = ["py.typed", "prompts/templates/*.txt"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
